--- a/.github/workflows/trash.yml
+++ b/.github/workflows/trash.yml
@@ -11,11 +11,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: dummy
-        branch: master
-        commit_options: '--allow-empty --no-verify'
+      - name: do commits
+        run: |
+          for i in {1..10}; do git commit -m "test" --allow-empty; done
+          git push origin master
