--- a/.github/workflows/trash.yml
+++ b/.github/workflows/trash.yml
@@ -12,7 +12,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-      - name: do commits
+      - name: 'do a git'
         run: |
           for i in {1..10}; do git commit -m "trash" --allow-empty; done
           git push origin master
