--- a/.github/workflows/trash.yml
+++ b/.github/workflows/trash.yml
@@ -12,7 +12,16 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
-      - name: 'do a git'
+      - uses: actions/checkout@master
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+      - name: 'make trash commits'
         run: |
+          git config --local user.email "hazardous.narayan@gmail.com"
+          git config --local user.name "Lindsey Bieda"
           for i in {1..10}; do git commit -m "trash" --allow-empty; done
-          git push origin master
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
