--- a/.github/workflows/trash.yml
+++ b/.github/workflows/trash.yml
@@ -26,3 +26,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
