--- a/.github/workflows/trash.yml
+++ b/.github/workflows/trash.yml
@@ -16,6 +16,10 @@ jobs:
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
       - name: 'make trash commits'
         run: |
           git config --local user.email "hazardous.narayan@gmail.com"
