Use the trash commits python script

--- a/.github/workflows/trash.yml
+++ b/.github/workflows/trash.yml
@@ -16,20 +16,16 @@ jobs:
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-      - name: Set up Python 3.x
+      - name: 'Set up Python 3.x'
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - name: 'make trash commits'
+      - name: 'Make trash commits'
         run: |
           git config --local user.email "hazardous.narayan@gmail.com"
           git config --local user.name "Lindsey Bieda"
-          # Get a number between 1 and 10
-          number=$(awk -v min=1 -v max=10 'BEGIN{srand(); print int(min+rand()*(max-min+1))}')
-          echo $number
-          # Create that many commits
-          for i in {1..$number}; do git commit -m "trash" --allow-empty; echo "did a commit."; done
-      - name: Push changes
+          python make_commits.py
+      - name: 'Push changes'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
