--- a/.github/workflows/trash.yml
+++ b/.github/workflows/trash.yml
@@ -9,8 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@trunk
+      - uses: actions/checkout@master
         with:
+          ref: trunk
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
       - name: 'Set up Python 3.x'
